completed styling for sign in page
matched sign in page with styling of sign up page, reusing same classes and form structure. updated spacing for sign up page form as well

--- a/droom/src/index.css
+++ b/droom/src/index.css
@@ -193,3 +193,15 @@ body {
          justify-content: center;
      }
  }
+
+ .noAccountLink {
+     text-decoration: none;
+     color: black;
+     text-align: center;
+     margin-top: 2rem;
+ }
+
+ .noAccountLink:hover {
+     text-decoration: none;
+     color: #ff00f0;
+ }
