changed header styling, to remove text decoration and change the color to white

--- a/droom/src/index.css
+++ b/droom/src/index.css
@@ -24,6 +24,15 @@ body {
     border: 3px solid #3dd3e3;
 }
 
+.navLink {
+    color: white;
+    text-decoration: none;
+}
+
+.navLink:hover {
+    text-decoration: none;
+    color: #3dd3e3;
+}
 
 /*Footer*/
 .footerTop {
